# mercury

./: .env.example  .gitattributes  .gitignore  .yarnrc.yml  CONTRIBUTING.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  Coronavirus bat statistics  Dockerfile  LICENSE-COMMERCIAL.txt  LICENSE.txt  MANIFEST.in  README.md  config.toml  docker-compose-https.yml  docker-compose-pro.yml  docker-compose.yml  example.config.toml  install.json  mkdocs.yml  package.json  pyproject.toml  setup-https.sh  setup-pro.sh  setup.py  tanenbaum-Copy1.ipynb  tanenbaum.ipynb  tsconfig.eslint.json  tsconfigbase.json  wait-kernel.ipynb
.github/workflows/: run-on-windows.yml  run-tests.yml  tests.yml
app/: fast-colors-sort-patch.js  index.js  package.json  publicpath.js  webpack.config.js  webpack.config.watch.js  ydoc-attach-patch.js
docker/: init-letsencrypt.sh
docker/mercury/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile  default.conf
docs/: README.md  admin-panel.md  articles.md  astro.config.mjs  authentication.md  configuration.md  embedding.md  export-pdf-html.md  faq.md  get-started.md  index.md  index.rst  installation.md  interactive-slides.md  notebook-as-rest-api.md  output-files.md  package-lock.json  package.json  pro.md  requirements.txt  schedule.md  welcome.md  widgets.md  yaml-parameters.md
docs/deploy/: aws.md  azure.md  deployment.md  heroku.md  https-support.md  hugging-face-spaces.md
example_styles/: README.md  corporate-blue.toml  dark-ops.toml  editorial-serif.toml  forest-bio.toml  minimal-light.toml  neon-terminal.toml  pastel-studio.toml  slate-dark.toml  warm-sand.toml
frontend/: package.json
mercury/: .gitignore  CaptureShell.ipynb  Hello World.ipynb  __init__.py  button.py  checkbox.py  columns.py  config.py  date.py  daterange.py  datetime_input.py  demo.py  demo2.ipynb  download.py  expander.py  file.py  image.py  indicator.py  json.py  manage.py  manager.py  md.py  mercury.py  multiselect.py  number.py  pdf.py  progressbar.py  requirements.txt  select.py  slider.py  stop.py  table.py  tabs.py  text.py  theme.py  this-is-test-file.txt  time.py  tough.ipynb  url_params.py
mercury_app/: __init__.py  __main__.py  app.py  block_handler.py  custom_contents_handler.py  handlers.py  idle_timeout.py  mercury_hybrid_cm.py  notebooks.py  notebooks_meta.py  root.py  serverextension.py  theme_handler.py
scripts/: dual_pack_mercury.sh  pack_mercury.sh  rebuild-frontend.sh
(+375 files in other folders)
